--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body>
     <header>
         <div class="headerLogo">
-            <a href="index.html"><img src="imagenes/logo.png" alt="Logo principal"></a>
+            <div>
+                <a href="index.html"><img src="imagenes/logo.png" alt="Logo principal"></a>
+            </div>
             <h1>Pastas Trivelli's</h1>
         </div>
         <nav class="navbar navbar-expand-lg navbar-light">
@@ -111,9 +113,24 @@
         </div>
         <div class="redes">
             <ul>
-                <li><a href="#"><img src="imagenes/facebook.png" alt="Facebook"></a></li>
-                <li><a href="#"><img src="imagenes/instagram.png" alt="Instagram"></a></li>
-                <li><a href="#"><img src="imagenes/youtube.png" alt="YouTube"></a></li>
+                <li>
+                    <a href="#" class="facebook">
+                        <img class="iconoFacebook" src="imagenes/facebook.png" alt="Facebook">
+                        <img class="iconoFacebook" src="imagenes/facebookHover.png" alt="Facebook">
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="instagram">
+                        <img class="iconoInstagram" src="imagenes/instagram.png" alt="Instagram">
+                        <img class="iconoInstagram" src="imagenes/instagramHover.png" alt="Instagram">
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="youtube">
+                        <img class="iconoYoutube" src="imagenes/youtube.png" alt="YouTube">
+                        <img class="iconoYoutube" src="imagenes/youtubeHover.png" alt="YouTube">
+                    </a>
+                </li>
             </ul>
         </div>
     </footer>
