--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -13,7 +13,9 @@
 <body>
     <header>
         <div class="headerLogo">
-            <a href="../index.html"><img src="../imagenes/logo.png" alt="Logo principal"></a>
+            <div>
+                <a href="index.html"><img src="../imagenes/logo.png" alt="Logo principal"></a>
+            </div>
             <h1>Pastas Trivelli's</h1>
         </div>
         <nav class="navbar navbar-expand-lg navbar-light">
@@ -215,18 +217,32 @@
         </div>
     </div>
     <footer>
-        <div>
+        <div class="slogan">
             <h2>Pastas Trivelli's</h2>
             <p>Generaciones haciendo pastas</p>
-        </div>        
+        </div>
         <div class="redes">
-            <p>Date una vuelta por nuestras redes:</p>
             <ul>
-                <li><a href="#"><img src="../imagenes/facebook.png" alt="Facebook"></a></li>
-                <li><a href="#"><img src="../imagenes/instagram.png" alt="Instagram"></a></li>
-                <li><a href="#"><img src="..//imagenes/youtube.png" alt="YouTube"></a></li>
+                <li>
+                    <a href="#" class="facebook">
+                        <img class="iconoFacebook" src="../imagenes/facebook.png" alt="Facebook">
+                        <img class="iconoFacebook" src="../imagenes/facebookHover.png" alt="Facebook">
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="instagram">
+                        <img class="iconoInstagram" src="../imagenes/instagram.png" alt="Instagram">
+                        <img class="iconoInstagram" src="../imagenes/instagramHover.png" alt="Instagram">
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="youtube">
+                        <img class="iconoYoutube" src="../imagenes/youtube.png" alt="YouTube">
+                        <img class="iconoYoutube" src="../imagenes/youtubeHover.png" alt="YouTube">
+                    </a>
+                </li>
             </ul>
-        </div>    
+        </div>
     </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
